2007-06-02 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Documentation of background options
        * plotpriv.tcl: Support for extra background options and filling data series
        * plotannot.tcl: Image and gradient background options
        * plotdemos2.tcl: Demonstration of background options

2007-05-28 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Documentation of rchart subcommand
        * plotchart.tcl: Support for drawing an R-chart
        * plotpriv.tcl: Support for drawing an R-chart
        * plotdemos6.tcl: Demonstration of R-chart

2007-05-27 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Documentation of dot subcommand
        * plotchart.tcl: Support for drawing dots
        * plotpriv.tcl: Support for drawing dots, corrected mistakes in vector drawing
        * plotdemos6.tcl: Demonstration of dots and vectors

2007-05-26 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Documentation of right-hand axis, vectors
        * plotchart.tcl: Support for right-hand axis, vectors
        * plotpriv.tcl: Support for drawing vectors
        * plotaxis.tcl: Support for right-hand axis, tickmarks
        * plot3d.tcl: Draw tickmarks at 3D axes
        * scaling.tcl: Suppress testing output (time axis)

2007-05-14 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.tcl: Added an interval and a trend method for XY plots
        * plotpriv.tcl: Implementation of the interval and trend methods
        * plotdemo1.tcl: Examples of these methods

2007-05-03 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotpriv.tcl: Expanded the saveplot method (other file formats
                        than PostScript via Img)

2007-04-30 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.tcl: Added radial chart
        * plotpriv.tcl:  Added routines for radial chart